settings page and extention update

--- a/HB.LinkSaver/LinkSaverExtention/popup.html
+++ b/HB.LinkSaver/LinkSaverExtention/popup.html
@@ -50,20 +50,41 @@
  #datax{
   display: none;
  }
+ h2{
+    text-align: center;
+ }
+ textarea{
+
+  width: 90%;
+
+ }
+ .text-container{
+
+    text-align: center;
+ }
   </style>
 </head>
-<body>
-  <h2>Select a category:</h2>
+<body  style="width: 230px;">
+  <h2>Select a category</h2>
   <div id="myContainer">
-    <span class="CategoryItem">test1</span>
+    
   </div>
 
-  <br>
-  <textarea id="header" placeholder="Enter header"></textarea>
-  <br>
-  <textarea id="description" placeholder="Enter description"></textarea>
-  <br>
-  <button id="mybtn">Submit</button>
+  <div class="text-container">
+
+    <br>
+    <textarea id="header" placeholder="Enter header"></textarea>
+    <br>
+    <br>
+    <textarea id="description" placeholder="Enter description"></textarea>
+    <br>
+    <br>
+    <button id="mybtn">save this link</button>
+
+
+  </div>
+
+
 <br>
 
 
